--- a/index.html
+++ b/index.html
@@ -2,19 +2,50 @@
 <html>
 
 <head>
-    <title>Cool Background DOI</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.min.css">
+    <title>Background Generator</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Background Generator">
+    <meta name="apple-mobile-web-app-title" content="Background Generator">
+    <meta name="theme-color" content="#000029">
+    <meta name="msapplication-navbutton-color" content="#000029">
+    <meta name="msapplication-TileColor" content="#000029" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./img/favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="./css/main.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
 </head>
 
 <body id="gradient">
-    <h1>This is the Background DOI</h1>
-    <input class="color1" type="color" name="color1" value="#000000">
-    <input class="color2" type="color" name="color2" value="#ffffff">
-    <br>
-    <br>
-    <button id="random">Generate Random Gradient</button>
-    <h2>Current CSS Background</h2>
-    <h3></h3>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col">
+                <h1>Background Generator</h1>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col">
+                <h2>Seleccione dos colores: </h2>
+            </div>
+            <div class="col">
+                <input class="color1" type="color" name="color1" value="#000000">
+                <input class="color2" type="color" name="color2" value="#ffffff">
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col">
+                <button class="btn btn-outline-dark" id="random">Generar random gradient</button>
+            </div>
+        </div>
+        <div class="row">
+            <h2>CSS Background: </h2>
+            <h3></h3>
+        </div>
+    </div>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
